--- a/onbuild/Dockerfile
+++ b/onbuild/Dockerfile
@@ -2,4 +2,4 @@ FROM piotron/mdp
 MAINTAINER Undefined Network - Piotr 'Piotron' Radosz mail@piotron.net
 
 ONBUILD COPY presentation.mdp /presentations/presentation.mdp
-CMD ['presentation.mdp']
+CMD ["presentation.mdp"]
